[package]
name = "pymsyt"
version = "0.1.0"
authors = ["Caleb Smith <macadamiadaze@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
classifier = [
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[dependencies]
msyt = { git = "https://github.com/NiceneNerd/msyt" }