[package]
name = "pymsyt"
description = "MSBT editing in Python using MSYT"
version = "0.3.2"
homepage = "https://github.com/NiceneNerd/PyMsyt/"
repository = "https://github.com/NiceneNerd/PyMsyt/"
authors = ["Caleb Smith <macadamiadaze@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "docs/README.md"

[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
classifier = [
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[dependencies]
msyt = { git = "https://github.com/NiceneNerd/msyt", tag = "v1.2.1" }
msbt = { git = "https://github.com/NiceneNerd/msbt-rs" }
glob = "0.3.0"
pyo3 = { version = "0.12", features = ["extension-module"] }
rayon = "1.5.0"
serde_yaml = "0.8.14"
serde_json = "1.0.59"
serde = { version = "1.0.117", features = ["serde_derive"] }
